test/spec_vectors/simd_i8x16_cmp/fail/module_8.wat
(module (func (result v128) (i8x16.lt_s (i32.const 0) (f32.const 0))))